--- a/gpu-screen-recorder-git/PKGBUILD
+++ b/gpu-screen-recorder-git/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: dec05eba <dec05eba@protonmail.com>
 
 pkgname=gpu-screen-recorder-git
-pkgver=r618.3e2e244
+pkgver=r625.df83c8a
 pkgrel=1
 pkgdesc='A shadowplay-like screen recorder for Linux. The fastest screen recorder for Linux'
 arch=('x86_64')
 url="https://git.dec05eba.com/gpu-screen-recorder"
 license=('GPL3')
 makedepends=('meson')
-depends=('ffmpeg' 'libglvnd' 'libxcomposite' 'libxrandr' 'libxfixes' 'libx11' 'libpulse' 'libva' 'libdrm' 'libcap' 'wayland')
+depends=('ffmpeg' 'libglvnd' 'libxcomposite' 'libxrandr' 'libxfixes' 'libxi' 'libx11' 'libpulse' 'libva' 'libdrm' 'libcap' 'wayland')
 optdepends=(
     'nvidia-utils: Required to record your screen on NVIDIA'
     'libxnvctrl: Required when using the -oc option to overclock the NVIDIA GPU to workaround NVIDIA p2 state bug'
@@ -20,13 +20,13 @@ optdepends=(
 provides=('gpu-screen-recorder')
 conflicts=('gpu-screen-recorder')
 source=("${pkgname}-${pkgver}.tar.gz::https://dec05eba.com/snapshot/gpu-screen-recorder.git.${pkgver}.tar.gz")
-sha512sums=('e9b45e4f01a50da5d4cebf94c06e1b4a7aaaee8be649ac8dfd6527112ea488accd3f5607917ebc2d4765d65a2df70350d09612d1674440c532d1c55e32876262')
+sha512sums=('7bd3a6b9d6ab4dabf44573d0e64ff9161280514d2c3c2c937249033aca5d8ec10a139e4044a7023017bad89a9830011566c0628df17514cf51a47f91b143ac0e')
 install="${pkgname}.install" # setcap cap_sys_admin (gsr-kms-server), setcap cap_sys_nice (gpu-screen-recorder)
 
 build() {
   cd "$srcdir"
   arch-meson build -Dsystemd=true
-  meson compile -v -C build
+  meson compile -C build
 }
 
 package() {
